fix(shared) maven resource reference